infrastructure/k8s/01-getter.svc.yml
apiVersion: v1
kind: Service
metadata:
 name: book-getter-service
spec:
 selector:
  app: book-getter
 ports:
 - name: book-getter-port
   port: 80
   targetPort: 8081
