infrastructure/k8s/02-setter.svc.yml
apiVersion: v1
kind: Service
metadata:
 name: book-setter-service
spec:
 selector:
  app: book-setter
 ports:
 - name: book-setter-port
   port: 80
   targetPort: 8080
