infrastructure/k8s/1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/query"
          backend:
            service:
              name: book-getter
              port: 
                number: 80
        - pathType: Prefix
          path: "/command"
          backend:
            service:
              name: book-setter
              port: 
                number: 80
        # - pathType: exact
        #   path: "/query/metrics"
        #   backend:
        #     service:
        #       name: prometheus-server
        #       port: 
        #         number: 8124
        # - pathType: exact
        #   path: "/command/metrics"
        #   backend:
        #     service:
        #       name: prometheus-server
        #       port: 
        #         number: 8123
